enabled hybrid search
